add antd and fix version incompatibilities

--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,11 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# lock files
+package-lock.json
+yarn.lock
+pnpm-lock.yaml
+
+# other
+todo.md
