--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
+node_modules
 /.pnp
 .pnp.*
 .yarn/*
@@ -14,7 +14,7 @@
 /coverage
 
 # next.js
-/.next/
+.next/
 /out/
 
 # production
@@ -47,3 +47,52 @@ pnpm-lock.yaml
 
 # other
 todo.md
+estrutura.txt
+gerar estrutura.txt
+
+# Java / Maven / Quarkus specific ignores for the /server directory
+/server/target/
+/server/.idea/
+/server/.vscode/
+/server/*.iml
+/server/*.ipr
+/server/*.iws
+/server/hs_err_pid*
+/server/replay_pid*
+/server/.DS_Store
+/server/logs/
+/server/build/
+/server/.gradle/
+/server/mvnw
+/server/mvnw.cmd
+/server/.mvn/
+/server/src/main/docker/target/
+/server/src/main/native-sources/
+
+### STS ###
+.apt_generated
+.classpath
+.factorypath
+.project
+.settings
+.springBeans
+.sts4-cache
+
+### IntelliJ IDEA ###
+.idea
+*.iws
+*.iml
+*.ipr
+
+### NetBeans ###
+/nbproject/private/
+/nbbuild/
+/dist/
+/nbdist/
+/.nb-gradle/
+build/
+!**/src/main/**/build/
+!**/src/test/**/build/
+
+### VS Code ###
+.vscode/
