--- a/client/package.json
+++ b/client/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbo",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -12,11 +12,14 @@
     "@heroicons/react": "^2.2.0",
     "@types/jsonwebtoken": "^9.0.9",
     "antd": "^5.24.9",
+    "apexcharts": "^4.7.0",
     "axios": "^1.9.0",
     "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "next": "15.3.1",
     "nookies": "^2.5.2",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.7.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.56.4",
     "uuid": "^11.1.0"
