--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,20 +1,20 @@
 spring.application.name=Gestor de Estoque
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
 
-# H2 console configuration
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
+# PostgreSQL Datasource Configuration
+spring.datasource.url=${DB_URL:jdbc:postgresql://localhost:5432/gestor_estoque_db}
+spring.datasource.username=${DB_USERNAME:postgres}
+spring.datasource.password=${DB_PASSWORD:admin}
+spring.datasource.driver-class-name=org.postgresql.Driver
 
+# JPA Configuration
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 # Server port
 server.port=8080
 
 # Security properties (adjust as needed)
-jwt.secret=YOUR_SECRET_KEY_HERE # Replace with a strong, unique secret key
-jwt.expiration=86400000 # Token expiration time in milliseconds (e.g., 24 hours)
+jwt.secret=${JWT_SECRET:YOUR_SECRET_KEY_HERE} # Replace with a strong, unique secret key
+jwt.expiration=${JWT_EXPIRATION:86400000} # Token expiration time in milliseconds (e.g., 24 hours)
 
