fix: update React and ReactDOM to version 19, adjust Select components to remove placeholder and allow clearer filtering

--- a/client/package.json
+++ b/client/package.json
@@ -18,19 +18,20 @@
     "jwt-decode": "^4.0.0",
     "next": "15.3.1",
     "nookies": "^2.5.2",
-    "react": "^18.2.0",
+    "react": "^19.0.0",
     "react-apexcharts": "^1.7.0",
-    "react-dom": "^18.2.0",
+    "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.4",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
+    "@ant-design/v5-patch-for-react-19": "^1.0.3",
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/cookie": "^1.0.0",
     "@types/node": "^20",
-    "@types/react": "^18.0.28",
-    "@types/react-dom": "^18.0.11",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
     "@types/uuid": "^10.0.0",
     "eslint": "^9",
     "eslint-config-next": "15.3.1",
