--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@google/genai": "^1.7.0",
     "@heroicons/react": "^2.2.0",
     "@types/jsonwebtoken": "^9.0.9",
     "antd": "^5.24.9",
